--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "eslint": "eslint --max-warnings 0 postgres redis services",
     "test": "jest"
   },
   "author": "",
@@ -18,6 +19,7 @@
     "redis": "^2.8.0"
   },
   "devDependencies": {
+    "eslint": "^5.0.1",
     "jest": "^23.2.0"
   }
 }
