--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
   "name": "amphora-storage-postgres",
   "version": "0.0.1",
-  "description": "",
+  "description": "A storage module for Amphora that leverages Postgres and Redis",
   "main": "index.js",
   "scripts": {
     "eslint": "eslint --max-warnings 0 postgres redis services",
     "jest": "jest",
-    "test": "npm run eslint && npm run jest"
+    "test": "npm run eslint && npm run jest",
+    "docs:clean": "rimraf ./_book",
+    "docs:prepare": "gitbook install",
+    "docs:watch": "npm run docs:prepare && gitbook serve",
+    "docs:build": "gitbook build ./",
+    "docs:publish": "npm run docs:clean && npm run docs:build && cd _book && git init && git commit --allow-empty -m 'update book' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update book' && git push git@github.com:clay/amphora gh-pages --force"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clay/amphora-storage-postgres.git"
+  },
+  "author": "New York Media",
   "license": "MIT",
   "dependencies": {
     "amphora-fs": "^0.2.0",
     "bluebird": "^3.5.1",
     "clay-log": "^1.3.0",
     "clayutils": "^2.3.0",
+    "gitbook-plugin-github": "^2.0.0",
     "pg": "^7.4.3",
     "pg-query-stream": "^1.1.1",
     "redis": "^2.8.0"
   },
   "devDependencies": {
     "eslint": "^5.0.1",
+    "gitbook-cli": "^2.3.2",
+    "gitbook-plugin-accordion": "^1.1.3",
+    "gitbook-plugin-anchorjs": "^2.0.0",
+    "gitbook-plugin-bootstrap-callout": "^0.1.2",
+    "gitbook-plugin-github": "^3.0.0",
     "jest": "^23.2.0"
   }
 }
