--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
       - run:
           name: Publish package
           command: npm publish
+      - run:
+          name: Send to Coveralls
+          command: cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 workflows:
   version: 2
