--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   "author": "New York Media",
   "license": "MIT",
   "dependencies": {
+    "JSONStream": "^1.3.3",
     "amphora-fs": "^0.3.0",
     "bluebird": "^3.5.1",
     "clay-log": "^1.3.0",
     "clayutils": "^2.6.0",
+    "highland": "^2.13.0",
     "knex": "^0.15.0",
     "pg": "^7.4.3",
+    "pg-query-stream": "^1.1.1",
     "redis": "^2.8.0"
   },
   "devDependencies": {
