--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "clay-log": "^1.3.0",
     "clayutils": "^2.6.0",
     "highland": "^2.13.0",
+    "ioredis": "^4.2.0",
     "knex": "^0.15.2",
     "pg": "7.4.3",
-    "pg-query-stream": "^1.1.1",
-    "redis": "^2.8.0"
+    "pg-query-stream": "^1.1.1"
   },
   "devDependencies": {
     "coveralls": "^3.0.1",
