--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amphora-storage-postgres",
-  "version": "1.2.0",
+  "version": "1.3.1-beta.1",
   "description": "A storage module for Amphora that leverages Postgres and Redis",
   "main": "index.js",
   "scripts": {
